src/test/ui/binop/issue-77910-2.stderr
error[E0369]: binary operation `==` cannot be applied to type `for<'r> fn(&'r i32) -> &'r i32 {foo}`
  --> $DIR/issue-77910-2.rs:7:12
   |
LL |     if foo == y {}
   |        --- ^^ - _
   |        |
   |        for<'r> fn(&'r i32) -> &'r i32 {foo}

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
